// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RefinementList rendering with facets 1`] = `
<div
  className="root customClassName"
>
  <ul
    className="list"
  >
    <li
      className="item"
      onClick={[Function]}
    >
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": Object {
              "attribute": "attribute",
              "count": 1200,
              "cssClasses": Object {
                "checkbox": "checkbox",
                "count": "count",
                "disabledShowMore": "disabledShowMore",
                "item": "item",
                "label": "label",
                "labelText": "labelText",
                "list": "list",
                "noRefinementRoot": "noRefinementRoot",
                "noResults": "noResults",
                "root": "root",
                "searchBox": "searchBox",
                "selectedItem": "selectedItem",
                "showMore": "showMore",
              },
              "isRefined": false,
              "label": "Amazon",
              "url": undefined,
            },
          }
        }
      />
    </li>
    <li
      className="item selectedItem"
      onClick={[Function]}
    >
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": Object {
              "attribute": "attribute",
              "count": 1000,
              "cssClasses": Object {
                "checkbox": "checkbox",
                "count": "count",
                "disabledShowMore": "disabledShowMore",
                "item": "item",
                "label": "label",
                "labelText": "labelText",
                "list": "list",
                "noRefinementRoot": "noRefinementRoot",
                "noResults": "noResults",
                "root": "root",
                "searchBox": "searchBox",
                "selectedItem": "selectedItem",
                "showMore": "showMore",
              },
              "isRefined": true,
              "label": "Google",
              "url": undefined,
            },
          }
        }
      />
    </li>
  </ul>
</div>
`;

exports[`RefinementList rendering with facets and disabled show more 1`] = `
<div
  className="root customClassName"
>
  <ul
    className="list"
  >
    <li
      className="item"
      onClick={[Function]}
    >
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": Object {
              "attribute": "attribute",
              "count": 1200,
              "cssClasses": Object {
                "checkbox": "checkbox",
                "count": "count",
                "disabledShowMore": "disabledShowMore",
                "item": "item",
                "label": "label",
                "labelText": "labelText",
                "list": "list",
                "noRefinementRoot": "noRefinementRoot",
                "noResults": "noResults",
                "root": "root",
                "searchBox": "searchBox",
                "selectedItem": "selectedItem",
                "showMore": "showMore",
              },
              "isRefined": false,
              "label": "Amazon",
              "url": undefined,
            },
          }
        }
      />
    </li>
    <li
      className="item selectedItem"
      onClick={[Function]}
    >
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": Object {
              "attribute": "attribute",
              "count": 1000,
              "cssClasses": Object {
                "checkbox": "checkbox",
                "count": "count",
                "disabledShowMore": "disabledShowMore",
                "item": "item",
                "label": "label",
                "labelText": "labelText",
                "list": "list",
                "noRefinementRoot": "noRefinementRoot",
                "noResults": "noResults",
                "root": "root",
                "searchBox": "searchBox",
                "selectedItem": "selectedItem",
                "showMore": "showMore",
              },
              "isRefined": true,
              "label": "Google",
              "url": undefined,
            },
          }
        }
      />
    </li>
  </ul>
  <button
    className="showMore disabledShowMore"
    dangerouslySetInnerHTML={
      Object {
        "__html": Object {},
      }
    }
  />
</div>
`;

exports[`RefinementList rendering with facets and show more 1`] = `
<div
  className="root customClassName"
>
  <ul
    className="list"
  >
    <li
      className="item"
      onClick={[Function]}
    >
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": Object {
              "attribute": "attribute",
              "count": 1200,
              "cssClasses": Object {
                "checkbox": "checkbox",
                "count": "count",
                "disabledShowMore": "disabledShowMore",
                "item": "item",
                "label": "label",
                "labelText": "labelText",
                "list": "list",
                "noRefinementRoot": "noRefinementRoot",
                "noResults": "noResults",
                "root": "root",
                "searchBox": "searchBox",
                "selectedItem": "selectedItem",
                "showMore": "showMore",
              },
              "isRefined": false,
              "label": "Amazon",
              "url": undefined,
            },
          }
        }
      />
    </li>
    <li
      className="item selectedItem"
      onClick={[Function]}
    >
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": Object {
              "attribute": "attribute",
              "count": 1000,
              "cssClasses": Object {
                "checkbox": "checkbox",
                "count": "count",
                "disabledShowMore": "disabledShowMore",
                "item": "item",
                "label": "label",
                "labelText": "labelText",
                "list": "list",
                "noRefinementRoot": "noRefinementRoot",
                "noResults": "noResults",
                "root": "root",
                "searchBox": "searchBox",
                "selectedItem": "selectedItem",
                "showMore": "showMore",
              },
              "isRefined": true,
              "label": "Google",
              "url": undefined,
            },
          }
        }
      />
    </li>
  </ul>
  <button
    className="showMore"
    dangerouslySetInnerHTML={
      Object {
        "__html": Object {},
      }
    }
  />
</div>
`;

exports[`RefinementList rendering with facets from search 1`] = `
<div
  className="root customClassName"
>
  <div
    className="searchBox"
  >
    <div
      className="ais-SearchBox"
    >
      <form
        action=""
        className="ais-SearchBox-form"
        noValidate="novalidate"
        onReset={[Function]}
        onSubmit={[Function]}
        role="search"
      >
        <input
          autoCapitalize="off"
          autoComplete="off"
          autoCorrect="off"
          className="ais-SearchBox-input"
          disabled={false}
          maxLength="512"
          onChange={[Function]}
          placeholder="Search"
          spellCheck="false"
          type="search"
        />
        <button
          className="ais-SearchBox-submit"
          title="Submit the search query."
          type="submit"
        >
          <svg
            className="ais-SearchBox-submitIcon"
            height="10"
            viewBox="0 0 40 40"
            width="10"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M26.804 29.01c-2.832 2.34-6.465 3.746-10.426 3.746C7.333 32.756 0 25.424 0 16.378 0 7.333 7.333 0 16.378 0c9.046 0 16.378 7.333 16.378 16.378 0 3.96-1.406 7.594-3.746 10.426l10.534 10.534c.607.607.61 1.59-.004 2.202-.61.61-1.597.61-2.202.004L26.804 29.01zm-10.426.627c7.323 0 13.26-5.936 13.26-13.26 0-7.32-5.937-13.257-13.26-13.257C9.056 3.12 3.12 9.056 3.12 16.378c0 7.323 5.936 13.26 13.258 13.26z"
            />
          </svg>
        </button>
        <button
          className="ais-SearchBox-reset"
          hidden={true}
          title="Clear the search query."
          type="reset"
        >
          <svg
            className="ais-SearchBox-resetIcon"
            height="10"
            viewBox="0 0 20 20"
            width="10"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8.114 10L.944 2.83 0 1.885 1.886 0l.943.943L10 8.113l7.17-7.17.944-.943L20 1.886l-.943.943-7.17 7.17 7.17 7.17.943.944L18.114 20l-.943-.943-7.17-7.17-7.17 7.17-.944.943L0 18.114l.943-.943L8.113 10z"
            />
          </svg>
        </button>
        <span
          className="ais-SearchBox-loadingIndicator"
          hidden={true}
        >
          <svg
            className="ais-SearchBox-loadingIcon"
            height="16"
            stroke="#444"
            viewBox="0 0 38 38"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              fill="none"
              fillRule="evenodd"
            >
              <g
                strokeWidth="2"
                transform="translate(1 1)"
              >
                <circle
                  cx="18"
                  cy="18"
                  r="18"
                  strokeOpacity=".5"
                />
                <path
                  d="M36 18c0-9.94-8.06-18-18-18"
                >
                  <animateTransform
                    attributeName="transform"
                    dur="1s"
                    from="0 18 18"
                    repeatCount="indefinite"
                    to="360 18 18"
                    type="rotate"
                  />
                </path>
              </g>
            </g>
          </svg>
        </span>
      </form>
    </div>
  </div>
  <ul
    className="list"
  >
    <li
      className="item"
      onClick={[Function]}
    >
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": Object {
              "attribute": "attribute",
              "count": 1200,
              "cssClasses": Object {
                "checkbox": "checkbox",
                "count": "count",
                "disabledShowMore": "disabledShowMore",
                "item": "item",
                "label": "label",
                "labelText": "labelText",
                "list": "list",
                "noRefinementRoot": "noRefinementRoot",
                "noResults": "noResults",
                "root": "root",
                "searchBox": "searchBox",
                "selectedItem": "selectedItem",
                "showMore": "showMore",
              },
              "isRefined": false,
              "label": "Amazon",
              "url": undefined,
            },
          }
        }
      />
    </li>
    <li
      className="item selectedItem"
      onClick={[Function]}
    >
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": Object {
              "attribute": "attribute",
              "count": 1000,
              "cssClasses": Object {
                "checkbox": "checkbox",
                "count": "count",
                "disabledShowMore": "disabledShowMore",
                "item": "item",
                "label": "label",
                "labelText": "labelText",
                "list": "list",
                "noRefinementRoot": "noRefinementRoot",
                "noResults": "noResults",
                "root": "root",
                "searchBox": "searchBox",
                "selectedItem": "selectedItem",
                "showMore": "showMore",
              },
              "isRefined": true,
              "label": "Google",
              "url": undefined,
            },
          }
        }
      />
    </li>
  </ul>
</div>
`;

exports[`RefinementList rendering without facets 1`] = `
<div
  className="root noRefinementRoot customClassName"
/>
`;

exports[`RefinementList rendering without facets from search 1`] = `
<div
  className="root noRefinementRoot customClassName"
>
  <div
    className="searchBox"
  >
    <div
      className="ais-SearchBox"
    >
      <form
        action=""
        className="ais-SearchBox-form"
        noValidate="novalidate"
        onReset={[Function]}
        onSubmit={[Function]}
        role="search"
      >
        <input
          autoCapitalize="off"
          autoComplete="off"
          autoCorrect="off"
          className="ais-SearchBox-input"
          disabled={false}
          maxLength="512"
          onChange={[Function]}
          placeholder="Search"
          spellCheck="false"
          type="search"
        />
        <button
          className="ais-SearchBox-submit"
          title="Submit the search query."
          type="submit"
        >
          <svg
            className="ais-SearchBox-submitIcon"
            height="10"
            viewBox="0 0 40 40"
            width="10"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M26.804 29.01c-2.832 2.34-6.465 3.746-10.426 3.746C7.333 32.756 0 25.424 0 16.378 0 7.333 7.333 0 16.378 0c9.046 0 16.378 7.333 16.378 16.378 0 3.96-1.406 7.594-3.746 10.426l10.534 10.534c.607.607.61 1.59-.004 2.202-.61.61-1.597.61-2.202.004L26.804 29.01zm-10.426.627c7.323 0 13.26-5.936 13.26-13.26 0-7.32-5.937-13.257-13.26-13.257C9.056 3.12 3.12 9.056 3.12 16.378c0 7.323 5.936 13.26 13.258 13.26z"
            />
          </svg>
        </button>
        <button
          className="ais-SearchBox-reset"
          hidden={true}
          title="Clear the search query."
          type="reset"
        >
          <svg
            className="ais-SearchBox-resetIcon"
            height="10"
            viewBox="0 0 20 20"
            width="10"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8.114 10L.944 2.83 0 1.885 1.886 0l.943.943L10 8.113l7.17-7.17.944-.943L20 1.886l-.943.943-7.17 7.17 7.17 7.17.943.944L18.114 20l-.943-.943-7.17-7.17-7.17 7.17-.944.943L0 18.114l.943-.943L8.113 10z"
            />
          </svg>
        </button>
        <span
          className="ais-SearchBox-loadingIndicator"
          hidden={true}
        >
          <svg
            className="ais-SearchBox-loadingIcon"
            height="16"
            stroke="#444"
            viewBox="0 0 38 38"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              fill="none"
              fillRule="evenodd"
            >
              <g
                strokeWidth="2"
                transform="translate(1 1)"
              >
                <circle
                  cx="18"
                  cy="18"
                  r="18"
                  strokeOpacity=".5"
                />
                <path
                  d="M36 18c0-9.94-8.06-18-18-18"
                >
                  <animateTransform
                    attributeName="transform"
                    dur="1s"
                    from="0 18 18"
                    repeatCount="indefinite"
                    to="360 18 18"
                    type="rotate"
                  />
                </path>
              </g>
            </g>
          </svg>
        </span>
      </form>
    </div>
  </div>
  <div
    className="noResults"
    dangerouslySetInnerHTML={
      Object {
        "__html": Object {},
      }
    }
  />
</div>
`;
